allprojects {
    apply plugin: 'java'

    group 'com.jenet'
    version '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    compileJava {
        options.release = 19
        options.compilerArgs << "--enable-preview"
        options.fork = true
        options.forkOptions.executable = "D:/CustomJavaVersions/jdk-19/bin/javac" // ${jdk19_home}
    }
}